Backtesting for all epoch_models and save results to csv

--- a/Test1/Code/lstm.ipynb
+++ b/Test1/Code/lstm.ipynb
@@ -31,7 +31,9 @@
     "import torch.optim as optim\n",
     "from backtesting import Backtest\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import os\n",
+    "import datetime"
    ]
   },
   {
@@ -393,121 +395,75 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-11-01T10:17:07.924159Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from lumibot.backtesting import YahooDataBacktesting\n",
-    "from datetime import datetime \n",
-    "from lumibot.brokers import Alpaca\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "i = 1\n",
-    "model_path = f\"/Users/leonanthonymenge/Documents/AKI/Test1/Models/model-{i}.pt\"\n",
-    "model = Net(input_size, output_size, hidden_size, num_layers)\n",
-    "\n",
-    "# Load state_dict only\n",
-    "model.load_state_dict(torch.load(model_path))  # Do not use weights_only\n",
-    "model.eval()\n",
-    "\n",
-    "ALPACA_CREDS = {\n",
-    "    \"API_KEY\":os.getenv(\"ALPACA_API_KEY\"), \n",
-    "    \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"), \n",
-    "    \"PAPER\": True\n",
-    "}\n",
-    "\n",
-    "# Strategy setup\n",
-    "start_date = datetime(2020, 1, 1)\n",
-    "end_date = datetime(2023, 12, 31)\n",
-    "broker = Alpaca(ALPACA_CREDS)\n",
-    "\n",
-    "# Instantiate and run the strategy\n",
-    "strategy = Backtest(\n",
-    "    name='test1',\n",
-    "    broker=broker,\n",
-    "    parameters={\n",
-    "        \"symbol\": \"DAX\",\n",
-    "        \"cash_at_risk\": 0.5,\n",
-    "        \"model\": model,\n",
-    "        \"num_prior_days\": 5\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "strategy.backtest(\n",
-    "    YahooDataBacktesting,\n",
-    "    start_date,\n",
-    "    end_date,\n",
-    "    parameters={\"symbol\": \"DAX\", \"cash_at_risk\": 0.5, \"model\":model}\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-11-01T10:17:07.928733Z",
      "start_time": "2024-11-01T10:17:07.924953Z"
     }
    },
    "outputs": [],
    "source": [
-    "from pandas import Timedelta\n",
-    "import os\n",
-    "from datetime import datetime\n",
-    "import torch\n",
     "\n",
-    "# Assuming Net is defined and imported properly\n",
-    "i = 1\n",
-    "model_path = f\"/Users/leonanthonymenge/Documents/AKI/Test1/Models/model-{i}.pt\"\n",
-    "model = Net(input_size, output_size, hidden_size, num_layers)\n",
     "\n",
-    "# Load state_dict only\n",
-    "model.load_state_dict(torch.load(model_path))  # Do not use weights_only\n",
-    "model.eval()\n",
+    "models = [f for f in os.listdir(\"../Models/\") if os.path.isfile(os.path.join(\"../Models/\", f))]\n",
+    "results = []\n",
     "\n",
-    "# Alpaca API Credentials\n",
-    "ALPACA_CREDS = {\n",
-    "    \"API_KEY\": os.getenv(\"ALPACA_API_KEY\"),\n",
-    "    \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"),\n",
-    "    \"PAPER\": True\n",
-    "}\n",
     "\n",
-    "# Strategy setup\n",
-    "start_date = datetime(2020, 1, 1)\n",
-    "end_date = datetime(2023, 12, 31)\n",
-    "broker = Alpaca(ALPACA_CREDS)\n",
-    "prior_days = 5\n",
-    "today, prior_date = datetime(2023, 1, 5), datetime(2023, 1, 5) - Timedelta(days=prior_days + 10)\n",
+    "for model_name in models:\n",
     "\n",
-    "print(prior_date)\n",
-    "print(today)\n",
+    "    model_path = f\"../Models/{model_name}\"\n",
+    "    model = Net(input_size, output_size, hidden_size, num_layers)\n",
     "\n",
-    "# Collect finance data\n",
-    "finance_data = get_finance_data(\"DAX\", start=prior_date, end=today, interval=\"1d\")\n",
+    "    # Load state_dict only\n",
+    "    model.load_state_dict(torch.load(model_path))  # Do not use weights_only\n",
+    "    model.eval()\n",
     "\n",
-    "if finance_data.empty:\n",
-    "    raise ValueError(\"Finance data is empty. Check data source or date range.\")\n",
+    "    ALPACA_CREDS = {\n",
+    "        \"API_KEY\": os.getenv(\"ALPACA_API_KEY\"), \n",
+    "        \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"), \n",
+    "        \"PAPER\": True\n",
+    "    }\n",
     "\n",
-    "finance_data['trend'] = finance_data.apply(determine_trend, axis=1)\n",
-    "data = finance_data.iloc[:, 1:].sort_index(ascending=False)[:5]\n",
-    "data[\"month\"] = data[\"month\"].astype(int)\n",
+    "    # Strategy setup\n",
+    "    start_date = datetime(2023, 11, 1)\n",
+    "    end_date = datetime(2023, 12, 31)\n",
+    "    broker = Alpaca(ALPACA_CREDS)\n",
     "\n",
-    "print(data.dtypes)\n",
-    "print(data.to_numpy())\n",
+    "    # Instantiate and run the strategy\n",
+    "    strategy = Backtest(\n",
+    "        name=model_name,  \n",
+    "        broker=broker,\n",
+    "        parameters={\n",
+    "            \"symbol\": \"DAX\",\n",
+    "            \"cash_at_risk\": 0.5,\n",
+    "            \"model\": model,\n",
+    "            \"num_prior_days\": 5\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "# Reshape with necessary adjustments\n",
-    "x = data.to_numpy().reshape(1, 5, len(data.columns))\n",
-    "print(f\"X-Shape: {x.shape}\")\n",
+    "    # Run the backtest\n",
+    "    backtest_results = strategy.backtest(\n",
+    "        YahooDataBacktesting,\n",
+    "        start_date,\n",
+    "        end_date,\n",
+    "        parameters={\"symbol\": \"DAX\", \"cash_at_risk\": 0.5, \"model\": model}\n",
+    "    )\n",
+    "    backtest_results = pd.DataFrame(backtest_results)\n",
+    "    backtest_results[\"model\"] = model_name\n",
+    "    results.append(backtest_results)\n",
     "\n",
-    "# Make prediction\n",
-    "prediction = int(model(torch.tensor(x, dtype=torch.float32)).round().item())\n",
-    "print(f\"Prediction: {prediction}\")\n"
+    "# Save the results to a CSV file\n",
+    "\n",
+    "pd.concat(results, ignore_index=True).to_csv(\"results.csv\", index=False)\n",
+    "\n",
+    "print(\"Backtesting complete. Results saved to backtest_results.csv.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(pd.read_csv(\"results.csv\"))"
    ]
   },
   {
