--- a/Test1/Code/lstm.ipynb
+++ b/Test1/Code/lstm.ipynb
@@ -33,7 +33,9 @@
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import os\n",
-    "import datetime"
+    "from datetime import datetime\n",
+    "from lumibot.brokers import Alpaca\n",
+    "from lumibot.backtesting import YahooDataBacktesting"
    ]
   },
   {
@@ -85,15 +87,15 @@
     "# Model parameter\n",
     "input_size = 9\n",
     "output_size = 1\n",
-    "hidden_size = 10\n",
-    "num_layers = 2\n",
+    "hidden_size = 1000\n",
+    "num_layers = 6\n",
     "dropout = 0.2\n",
     "\n",
     "# Training parameter\n",
     "batch_size = 16\n",
-    "num_epochs = 1\n",
+    "num_epochs = 50\n",
     "learning_rate = 0.001\n",
-    "seq_size = 10"
+    "seq_size = 30"
    ]
   },
   {
@@ -238,7 +240,6 @@
     "for epoch in range(num_epochs):\n",
     "    running_loss = 0\n",
     "    for inputs, labels in train_loader:\n",
-    "        print(inputs.shape)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = net(inputs.float())\n",
     "        loss = criterion(torch.squeeze(outputs), labels.float())\n",
