--- a/Test1/Code/lstm.ipynb
+++ b/Test1/Code/lstm.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "# Training parameter\n",
     "batch_size = 16\n",
-    "num_epochs = 50\n",
+    "num_epochs = 100\n",
     "learning_rate = 0.001\n",
     "seq_size = 30"
    ]
@@ -263,13 +263,108 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Backtesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-01T10:17:07.928733Z",
+     "start_time": "2024-11-01T10:17:07.924953Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "models = [f for f in os.listdir(\"../Models/\") if os.path.isfile(os.path.join(\"../Models/\", f))]\n",
+    "results = []\n",
+    "\n",
+    "os.makedirs(\"logs\", exist_ok=True)\n",
+    "os.makedirs(\"results\", exist_ok=True)\n",
+    "\n",
+    "for model_name in models:\n",
+    "\n",
+    "    model_path = f\"../Models/{model_name}\"\n",
+    "    model = Net(input_size, output_size, hidden_size, num_layers)\n",
+    "\n",
+    "    # Load state_dict only\n",
+    "    model.load_state_dict(torch.load(model_path, weights_only=False))\n",
+    "    model.eval()\n",
+    "\n",
+    "    ALPACA_CREDS = {\n",
+    "        \"API_KEY\": os.getenv(\"ALPACA_API_KEY\"), \n",
+    "        \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"), \n",
+    "        \"PAPER\": True\n",
+    "    }\n",
+    "\n",
+    "    # Strategy setup\n",
+    "    start_date = datetime(2023, 1, 1)\n",
+    "    end_date = datetime(2023, 12, 31)\n",
+    "    broker = Alpaca(ALPACA_CREDS)\n",
+    "\n",
+    "    # Instantiate and run the strategy\n",
+    "    strategy = Backtest(\n",
+    "        name=model_name,  \n",
+    "        broker=broker,\n",
+    "        parameters={\n",
+    "            \"symbol\": \"^GDAXI\",\n",
+    "            \"cash_at_risk\": 0.5,\n",
+    "            \"model\": model,\n",
+    "            \"num_prior_days\": 30\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    # Run the backtest\n",
+    "    backtest_results = strategy.backtest(\n",
+    "        YahooDataBacktesting,\n",
+    "        start_date,\n",
+    "        end_date,\n",
+    "        parameters={\"symbol\": \"^GDAXI\", \"cash_at_risk\": 0.5, \"model\": model},\n",
+    "        benchmark_asset=\"^GDAXI\",\n",
+    "        plot_file_html=f\"results/plot-{str(model_name)}.html\",\n",
+    "        tearsheet_file=f\"results/tearsheet-{model_name}.html\",\n",
+    "        trades_file=f\"results/plot-{str(model_name)}\",\n",
+    "        settings_file=f\"results/plot-{str(model_name)}\",\n",
+    "        indicators_file=f\"results/plot-{str(model_name)}\",\n",
+    "        show_plot=True,\n",
+    "        show_tearsheet=True\n",
+    "    )\n",
+    "    backtest_results = pd.DataFrame(backtest_results)\n",
+    "    backtest_results[\"model\"] = model_name\n",
+    "    results.append(backtest_results)\n",
+    "\n",
+    "# Save the results to a CSV file\n",
+    "pd.concat(results, ignore_index=True).to_csv(\"results.csv\", index=False)\n",
+    "\n",
+    "print(\"Backtesting complete. Results saved to backtest_results.csv.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"results.csv\")\n",
+    "display(df.sort_values(by=[\"model\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "best_model = df[df[\"total_return\"] == df[\"total_return\"].max()]\n",
+    "best_model.reset_index(inplace=True)\n",
+    "\n",
+    "model_name = best_model.at[0, \"model\"]\n",
+    "print(f\"Best model: {model_name}\")"
    ]
   },
   {
@@ -288,7 +383,12 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
     "\n",
-    "net.eval()\n",
+    "model_path = f\"../Models/{model_name}\"\n",
+    "model = Net(input_size, output_size, hidden_size, num_layers)\n",
+    "\n",
+    "# Load state_dict only\n",
+    "model.load_state_dict(torch.load(model_path))  # Do not use weights_only\n",
+    "model.eval()\n",
     "\n",
     "# Load your DataFrame\n",
     "data = pd.read_pickle('../Data/test_dax_data.pkl')\n",
@@ -302,10 +402,9 @@
     "\n",
     "with torch.no_grad():\n",
     "    for inputs, labels in test_loader:\n",
-    "        # Forward pass through the network\n",
-    "        out = net(inputs)  # The model expects (batch_size, sequence_length, num_features)\n",
+    "        out = model(inputs) \n",
     "        # Store predictions and labels\n",
-    "        all_predictions.append(out.numpy())  # Convert to numpy for easier handling\n",
+    "        all_predictions.append(out.numpy())  \n",
     "        all_labels.append(labels.numpy())\n",
     "\n",
     "# Concatenate results\n",
@@ -316,7 +415,6 @@
     "print(f'Predicted values: {all_predictions.flatten()}')\n",
     "print(f'Actual values: {all_labels.flatten()}')\n",
     "\n",
-    "# Optionally, save predictions to a CSV file\n",
     "output_df = pd.DataFrame({'Predicted': all_predictions.flatten(), 'Actual': all_labels.flatten()})\n"
    ]
   },
@@ -392,84 +490,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-01T10:17:07.928733Z",
-     "start_time": "2024-11-01T10:17:07.924953Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "models = [f for f in os.listdir(\"../Models/\") if os.path.isfile(os.path.join(\"../Models/\", f))]\n",
-    "results = []\n",
-    "\n",
-    "\n",
-    "for model_name in models:\n",
-    "\n",
-    "    model_path = f\"../Models/{model_name}\"\n",
-    "    model = Net(input_size, output_size, hidden_size, num_layers)\n",
-    "\n",
-    "    # Load state_dict only\n",
-    "    model.load_state_dict(torch.load(model_path))  # Do not use weights_only\n",
-    "    model.eval()\n",
-    "\n",
-    "    ALPACA_CREDS = {\n",
-    "        \"API_KEY\": os.getenv(\"ALPACA_API_KEY\"), \n",
-    "        \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"), \n",
-    "        \"PAPER\": True\n",
-    "    }\n",
-    "\n",
-    "    # Strategy setup\n",
-    "    start_date = datetime(2023, 11, 1)\n",
-    "    end_date = datetime(2023, 12, 31)\n",
-    "    broker = Alpaca(ALPACA_CREDS)\n",
-    "\n",
-    "    # Instantiate and run the strategy\n",
-    "    strategy = Backtest(\n",
-    "        name=model_name,  \n",
-    "        broker=broker,\n",
-    "        parameters={\n",
-    "            \"symbol\": \"DAX\",\n",
-    "            \"cash_at_risk\": 0.5,\n",
-    "            \"model\": model,\n",
-    "            \"num_prior_days\": 5\n",
-    "        }\n",
-    "    )\n",
-    "\n",
-    "    # Run the backtest\n",
-    "    backtest_results = strategy.backtest(\n",
-    "        YahooDataBacktesting,\n",
-    "        start_date,\n",
-    "        end_date,\n",
-    "        parameters={\"symbol\": \"DAX\", \"cash_at_risk\": 0.5, \"model\": model}\n",
-    "    )\n",
-    "    backtest_results = pd.DataFrame(backtest_results)\n",
-    "    backtest_results[\"model\"] = model_name\n",
-    "    results.append(backtest_results)\n",
-    "\n",
-    "# Save the results to a CSV file\n",
-    "\n",
-    "pd.concat(results, ignore_index=True).to_csv(\"results.csv\", index=False)\n",
-    "\n",
-    "print(\"Backtesting complete. Results saved to backtest_results.csv.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(pd.read_csv(\"results.csv\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
