--- a/Test1/Code/collect_data.ipynb
+++ b/Test1/Code/collect_data.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_finance_data(symbols=\"DAX\", interval=\"1d\",start=datetime(2015, 1, 1), end=datetime(2022, 12, 31))\n",
+    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=datetime(2015, 1, 1), end=datetime(2022, 12, 31))\n",
     "\n",
     "df['trend'] = df.apply(determine_trend, axis=1)\n",
     "\n",
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_finance_data(symbols=\"DAX\", interval=\"1d\", start=datetime(2023, 1, 1), end=datetime(2023, 12, 31))\n",
+    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\", start=datetime(2023, 1, 1), end=datetime(2023, 12, 31))\n",
     "\n",
     "df['trend'] = df.apply(determine_trend, axis=1)\n",
     "\n",
