--- a/Test3 - Interest Rate/Code/collect_data.ipynb
+++ b/Test3 - Interest Rate/Code/collect_data.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collect Data for Test 1\n",
+    "# Collect Data for Test 3\n",
     "- YFinance Data\n",
     "- Weekdays (int)\n",
     "- Month (int)\n",
+    "- Interest rate\n",
     "- Trend (int)\n",
     "- Buy or Sell"
    ]
@@ -17,7 +18,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-11-01T10:13:12.240288Z"
+     "end_time": "2024-11-08T11:03:21.041519Z",
+     "start_time": "2024-11-08T11:03:16.004828Z"
     },
     "is_executing": true
    },
@@ -25,7 +27,10 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from data_collector import get_finance_data, determine_trend"
+    "\n",
+    "from pandas import to_datetime\n",
+    "\n",
+    "from data_collector import get_finance_data, determine_trend, get_ecb_interest_rates"
    ]
   },
   {
@@ -38,10 +43,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-08T11:09:05.015221Z",
+     "start_time": "2024-11-08T11:09:04.674403Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=datetime(2015, 1, 1), end=datetime(2022, 12, 31))\n",
+    "start=\"2015-01-01\"\n",
+    "end=\"2022-12-31\"\n",
+    "start_dt=to_datetime(start)\n",
+    "end_dt=to_datetime(end)\n",
+    "\n",
+    "df_dax = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=start_dt, end=end_dt)\n",
+    "df_ecb = get_ecb_interest_rates(start, end)\n",
+    "\n",
+    "df = pd.merge(df_dax, df_ecb, left_on=\"Date\", right_on=\"DATE\", how=\"inner\")\n",
     "\n",
     "df['trend'] = df.apply(determine_trend, axis=1)\n",
     "\n",
@@ -71,10 +89,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-08T11:10:33.292788Z",
+     "start_time": "2024-11-08T11:10:33.223967Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\", start=datetime(2023, 1, 1), end=datetime(2023, 12, 31))\n",
+    "start=\"2023-01-01\"\n",
+    "end=\"2023-12-31\"\n",
+    "start_dt=to_datetime(start)\n",
+    "end_dt=to_datetime(end)\n",
+    "\n",
+    "df_dax = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=start_dt, end=end_dt)\n",
+    "df_ecb = get_ecb_interest_rates(start, end)\n",
     "\n",
     "df['trend'] = df.apply(determine_trend, axis=1)\n",
     "\n",
@@ -97,7 +126,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-08T09:44:43.341645Z",
+     "start_time": "2024-11-08T09:44:43.336612Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
