--- a/Test3 - Interest Rate/Code/lstm.ipynb
+++ b/Test3 - Interest Rate/Code/lstm.ipynb
@@ -40,7 +40,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-08T11:42:02.136656Z",
+     "start_time": "2024-11-08T11:42:02.130517Z"
+    }
+   },
    "source": [
     "### Device"
    ]
