--- a/Test4-Raw Material/Code/collect_data.ipynb
+++ b/Test4-Raw Material/Code/collect_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-11-01T10:13:12.240288Z"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,13 @@
     "    df['weekday'] = df['Date'].dt.dayofweek.astype(int)\n",
     "    \n",
     "    # return data\n",
-    "    if not os.path.exists(\"Test4-Raw Material/Data\"):\n",
-    "        os.mkdir(\"Test4-Raw Material/Data\")\n",
+    "    os.makedirs(\"Test4-Raw Material/Data\", exist_ok=True)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.makedirs('../Data', exist_ok=True)\n",
     "symbols = [\"^GDAXI\", \"GC=F\", \"BZ=F\"]\n",
     "results = []\n",
     "\n",
@@ -118,9 +118,9 @@
     "    results.append(df)\n",
     "\n",
     "# Merge all DataFrames on the \"Date\" column using reduce to iterate over all results\n",
-    "df = reduce(lambda left, right: pd.merge(left, right, on=\"Date\", how=\"outer\"), results)\n",
+    "df = reduce(lambda left, right: pd.merge(left, right, on=\"Date\", how=\"inner\"), results)\n",
     "\n",
-    "df = df.dropna(subset=[col for col in df.columns if \"^GDAXI\" in col])\n",
+    "df = df.dropna(subset=[col for col in df.columns])\n",
     "\n",
     "df[\"^GDAXI_trend\"] = df.apply(determine_trend, axis=1)\n",
     "\n",
@@ -130,9 +130,9 @@
     "            df.at[index-1, \"Invest\"] = True\n",
     "        else:\n",
     "            df.at[index-1, \"Invest\"] = False\n",
-    "df[\"Invest\"] = df[\"Invest\"].astype(bool)\n",
-    "df.to_pickle(\"Test4-Raw Material/Data/train_dax_data.pkl\")\n",
     "\n",
+    "df[\"Invest\"] = df[\"Invest\"].astype(bool)\n",
+    "df.to_pickle(\"../Data/train_dax_data.pkl\")\n",
     "display(df)\n"
    ]
   },
@@ -149,10 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "from functools import reduce\n",
-    "\n",
+    "os.makedirs('../Data', exist_ok=True)\n",
     "symbols = [\"^GDAXI\", \"GC=F\", \"BZ=F\"]\n",
     "results = []\n",
     "\n",
@@ -165,9 +162,9 @@
     "    results.append(df)\n",
     "\n",
     "# Merge all DataFrames on the \"Date\" column using reduce to iterate over all results\n",
-    "df = reduce(lambda left, right: pd.merge(left, right, on=\"Date\", how=\"outer\"), results)\n",
+    "df = reduce(lambda left, right: pd.merge(left, right, on=\"Date\", how=\"inner\"), results)\n",
     "\n",
-    "df = df.dropna(subset=[col for col in df.columns if \"^GDAXI\" in col])\n",
+    "df = df.dropna(subset=[col for col in df.columns])\n",
     "\n",
     "df[\"^GDAXI_trend\"] = df.apply(determine_trend, axis=1)\n",
     "\n",
@@ -177,10 +174,8 @@
     "            df.at[index-1, \"Invest\"] = True\n",
     "        else:\n",
     "            df.at[index-1, \"Invest\"] = False\n",
-    "df[\"Invest\"] = df[\"Invest\"].astype(bool)\n",
-    "print(df.dtypes)           \n",
-    "df.to_pickle(\"Test4-Raw Material/Data/test_dax_data.pkl\")\n",
-    "\n",
+    "df[\"Invest\"] = df[\"Invest\"].astype(bool)           \n",
+    "df.to_pickle(\"../Data/test_dax_data.pkl\")\n",
     "display(df)\n"
    ]
   },
